Añadiendo restricciones totales y quitando comentarios